# LibraryCatalogue

./: CMakeLists.txt  Makefile  ReadMe.md  main.cpp
include/: App.h  ConcreteStateExit.h  Engine.h  State.h  UI.h  Window.h  mainMenu.h  showBooks.h
migrations/: 001_init_schema.sql
migrations/fixtures/: 001_authors.sql  002_publishers.sql  003_books.sql
src/: App.cpp  Engine.cpp  UI.cpp  Window.cpp  main.cpp  mainMenu.cpp  showBooks.cpp
test/: my_test.cpp
